# sfs

./: CMakeLists.txt  README.md  sfs_client.cc  sfs_server.cc
.github/workflows/: cmake-single-platform.yml
protos/: sfs.proto
